sg.tf
resource "aws_security_group" "allow_ssh" {
  name        = "allow_ssh"
  description = "Allow TLS inbound traffic"
  vpc_id      = "${aws_vpc.dev.id}"

  ingress {
    
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    
    cidr_blocks = "0.0.0.0/0"
  }
  egress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
  
  }
}
